update readme and index.html

--- a/experience/index.html
+++ b/experience/index.html
@@ -86,7 +86,7 @@
 
       <div class="box">
           <h3>Aman's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials.</p>
+          <p>Thank you for visiting my portfolio website.<br/>  If you have any questions or would like to discuss potential opportunities, please do not hesitate to contact me.</p>
       </div>
 
       <div class="box">
