--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
 
 </div>
 
-<div class="viewall">
+<!-- <div class="viewall">
   <a href="/projects" class="btn"><span>View All</span>
     <i class="fas fa-arrow-right"></i>
 </a>
-</div>
+</div> -->
 
 </section>
 <!-- work project section ends -->
@@ -243,11 +243,11 @@
     </div>
   </div>
 
-  <div class="morebtn">
+  <!-- <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div>
+  </div> -->
 
 </div>
 
