--- a/404.html
+++ b/404.html
@@ -15,20 +15,20 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+  <a href="/" class="logo"><img src="./assets/images/aman-coloronTransparent.png"></a>
 
-        <div id="menu" class="fas fa-bars"></div>
-        <nav class="navbar">
-            <ul>
-            <li><a href="/#home">Home</a></li>
-            <li><a href="/#about">About</a></li>
-            <li><a href="/#skills">Skills</a></li>
-            <li><a href="/#education">Education</a></li>
-            <li><a href="/#work">Work</a></li>
-            <li><a href="/#experience">Experience</a></li>
-            <li><a href="/#contact">Contact</a></li>
-            </ul>
-        </nav>
+  <div id="menu" class="fas fa-bars"></div>
+  <nav class="navbar">
+    <ul>
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#footer">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <!-- navbar ends -->
 
@@ -79,7 +79,7 @@
         <h3>contact info</h3>
         <p> <i class="fas fa-phone"></i>+91 9929657870</p>
         <p> <i class="fas fa-envelope"></i>amansingh@gmail.com</p>
-        <p> <i class="fas fa-map-marked-alt"></i>Prayajraj, India-211012</p>
+        <p> <i class="fas fa-map-marked-alt"></i>Prayagraj, India-211012</p>
         <div class="share">
 
             <a href="https://www.linkedin.com/in/aman-singh1221/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
