--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
 
         <div class="resumebtn">
-          <a href="#" class="btn"><span>Resume</span>
+          <a href="./assets/resume/AmanSingh_202051022.pdf" class="btn"><span>Resume</span>
             <i class="fas fa-chevron-right"></i>
           </a>
         </div>
